Import upstream version 0.3

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,44 +5,46 @@ universal = 1
 license_file = NOTICE
 
 [aliases]
-release = clean --all sdist bdist_wheel 
+release = clean --all sdist bdist_wheel
 
 [tool:pytest]
-norecursedirs =
-    .git
-    bin
-    dist
-    build
-    _build
-    dist
-    local
-    ci
-    docs
-    man
-    share
-    samples
-    .cache
-    .settings
-    etc
-    Include
-    include
-    Lib
-    lib
-    Scripts
-    thirdparty/*
-    tmp/*
-    tests/testdata/*
-
+norecursedirs = 
+	.git
+	bin
+	dist
+	build
+	_build
+	dist
+	local
+	ci
+	docs
+	man
+	share
+	samples
+	.cache
+	.settings
+	etc
+	Include
+	include
+	Lib
+	lib
+	Scripts
+	thirdparty/*
+	tmp/*
+	tests/testdata/*
 python_files = *.py
+python_classes = Test
+python_functions = test
+addopts = 
+	-rfEsxXw
+	--strict
+	-s
+	-vv
+	--ignore docs/conf.py
+	--ignore setup.py
+	--doctest-modules
 
-python_classes=Test
-python_functions=test
+[egg_info]
+tag_build = 
+tag_date = 0
 
-addopts =
-    -rfEsxXw
-    --strict
-     -s
-     -vv
-    --ignore docs/conf.py
-    --ignore setup.py
-    --doctest-modules
